# taichi-unity2

./: .gitignore  Build-Android.ps1  Build-Android.sh  Build-Linux.sh  Build-Windows.ps1  CMakeLists.txt  README.md  build-ios.sh
.github/workflows/: taichi-pr.yml
cmake/: FindTaichi.cmake
examples/UnityNativeGlueDemo/Assets/Scenes/: SampleScene.unity
examples/UnityNativeGlueDemo/Assets/Scripts/: Demo.cs  Glue.cs
examples/UnityNativeGlueDemo/ProjectSettings/: ProjectSettings.asset
include/: PlatformBase.h
include/Glue/: Glue.h  GlueVulkan.h
include/taichi/: taichi_unity.h  taichi_unity.vulkan.h
src/: DemoApp.cpp  Glue.cpp  GlueVulkan.cpp  taichi_unity.cpp  taichi_unity.vulkan.cpp  taichi_unity_impl.cpp  taichi_unity_impl.h  taichi_unity_impl.metal.h  taichi_unity_impl.metal.mm  taichi_unity_impl.vulkan.cpp  taichi_unity_impl.vulkan.h
